# projet-eurobot-2025

./: README.md
ELEC/CODE/PID_I2C/: I2C_event.cpp  I2C_event.h  PID_I2C.ino  (+2 more)
ELEC/Driver_moteur_eurobot/: Driver_moteur_eurobot.kicad_pcb  Driver_moteur_eurobot.kicad_prl  Driver_moteur_eurobot.kicad_pro  Driver_moteur_eurobot.kicad_sch  fp-info-cache
ELEC/PCB_Motor/: PCB_Motor.kicad_pcb  PCB_Motor.kicad_prl  PCB_Motor.kicad_pro  PCB_Motor.kicad_sch
ELEC/Proposition_1_Driver_motor/: Proposition_1_Driver_motor.kicad_pcb  Proposition_1_Driver_motor.kicad_prl  Proposition_1_Driver_motor.kicad_pro  Proposition_1_Driver_motor.kicad_sch  fp-info-cache
ELEC/Schema_elec_robot/: Backup Of Schema_elec_robot.pdsbak  Last Loaded Schema_elec_robot.pdsbak  Last Loaded test.pdsbak  Schema_elec_robot.pdsprj  Schema_elec_robot.pdsprj.DESKTOP-GUILLAU.Guillaume.workspace  test.pdsprj
ELEC/Shield_custom_1/: Shield_custom_1.kicad_pcb  Shield_custom_1.kicad_prl  Shield_custom_1.kicad_pro  Shield_custom_1.kicad_sch  fp-info-cache  sym-lib-table
PROG/archives 2024/: adrésse MAC.ods  télécomes.ods
archives 2024/: matrices_led.CPP
archives 2024/P2P/: P2P.ino
archives 2024/client_prog_V2/: client_prog_V2.ino
archives 2024/client_prog_V3/: client_prog_V3.ino
archives 2024/main/: main.ino
archives 2024/main2_test/: main2_test.ino
archives 2024/manette/: manette.ino
archives 2024/recepteur/: recepteur.ino
archives 2024/robot V2/moteur/: CMakeLists.txt
archives 2024/serveur_prog_V3/: serveur_prog_V3.ino
archives 2024/telecomande/: Led_Matrix.cpp  telecomande.ino
(+170 files in other folders)
